updated author info

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,8 @@
+/**
+ * Created by Dustin Moore | https://www.dustinmoore.dev | https://www.github.com/dustinmmoore | https://www.linkedin.com/in/dustinmmoore
+ * Collaborated with Mike Moore | https://www.linkedin.com/in/mike-e-moore/
+ */
+
 :root {
     --primary-color: #2c3e50;
     --secondary-color: #3498db;
